YAML_KUB/cast-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cast-deployment
  namespace: standard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cast-service
  template:
    metadata:
      labels:
        app: cast-service
    spec:
      containers:
        - name: cast-service
          image: alexandrevb/cast-image:v.3.0
          command: ["uvicorn", "app.main:app", "--reload", "--host", "0.0.0.0", "--port", "8000"]
          ports:
            - containerPort: 8000
