YAML_KUB/cast-postgre-statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cast-postgres-statefulset
  namespace: standard
spec:
  serviceName: "postgres"
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:12.1-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: cast-postgres-storage
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: cast-postgres-storage
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
      storageClassName: local-path
