YAML_KUB/movie-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-deployment
  namespace: standard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-service
  template:
    metadata:
      labels:
        app: movie-service
    spec:
      containers:
        - name: movie-service
          image: alexandrevb/movie-image:v.3.0
          command: ["uvicorn", "app.main:app", "--reload", "--host", "0.0.0.0", "--port", "8000"]
          ports:
            - containerPort: 8000
