YAML_KUB/cast-postgre-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cast-db
  namespace: standard
spec:
  selector:
    app: cast-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
