YAML_KUB/cast-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cast-service
  namespace: standard
spec:
  selector:
    app: cast
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
