YAML_KUB/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cast-ingress
  namespace: standard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: jenkinsexam.alex33.dns-dynamic.net 
    http:
      paths:
      - path: /api/v1/casts
        pathType: Prefix
        backend:
          service:
            name: cast-service
            port:
              number: 80
      - path: /api/v1/movies
        pathType: Prefix
        backend:
          service:
            name: movie-service 
            port:
              number: 80
